Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 23:01+0200\n"
+"PO-Revision-Date: 2010-08-20 23:06+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7456,6 +7456,12 @@ msgid ""
 "phpMyAdmin panel. Set [a@?page=servers&amp;mode=edit&amp;id=%1$d#tab_Server]"
 "authentication type[/a] to [kbd]cookie[/kbd] or [kbd]http[/kbd]."
 msgstr ""
+"Jūs nustatėte [kbd]config[/kbd] identifikacijos tipą ir įtraukėte naudotojo "
+"vardą ir slaptažodį automatiniam prisijungimui, tai nėra pageidaujama "
+"realiems serveriams. Bet kas žinantis ar atspėjęs Jūsų phpMyAdmin saito "
+"adresą gali tiesiogiai prieiti prie Jūsų phpMyAdmin pultelio. Nustatyti "
+"[a@?page=servers&amp;mode=edit&amp;id=%1$d#tab_Server]identifikacijos "
+"tipą[/a] į [kbd]slapukų[/kbd] arba [kbd]http[/kbd]."
 
 #: setup/lib/messages.inc.php:237
 msgid "You should use mysqli for performance reasons"
