--- a/ChangeLog
+++ b/ChangeLog
@@ -104,6 +104,7 @@ $Id$
   thanks to Isaac Bennetch - ibennetch
 - patch #3038312 [export] JSON export, 
   thanks to Hauke Henningsen - blubberkeks152
+- rfe #2973909 Users preferences
 
 3.3.6.0 (not yet released)
 - bug #3033063 [core] Navi gets wrong db name
