--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-21 14:36+0200\n"
+"PO-Revision-Date: 2010-08-21 14:38+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -770,7 +770,6 @@ msgid "Values for the column \"%s\""
 msgstr "Valeurs pour la colonne «%s»"
 
 #: enum_editor.php:22
-#, fuzzy
 #| msgid ""
 #| "Please enter the values for transformation options using this format: "
 #| "'a', 100, b,'c'...<br />If you ever need to put a backslash (\"\\\") or a "
@@ -781,10 +780,10 @@ msgid ""
 "need to put a backslash (\"\\\") or a single quote (\"'\") amongst those "
 "values, precede it with a backslash (for example '\\\\xyz' or 'a\\'b')."
 msgstr ""
-"Veuillez entrer les valeurs des options de transformation en suivant ce "
-"format: 'a', 100, b,'c'...<br />Si vous devez entrer un caractère (\"\\\") "
-"ou une apostrophe (\"'\") parmi ces valeurs, faites-le précéder du caractère "
-"d'échappement, par exemple '\\\\xyz' or 'a\\'b')."
+"Veuillez entrer les valeurs dans des champs séparés et les entourer "
+"d'apostrophes. Si vous devez entrer un caractère (\"\\\") ou une apostrophe "
+"(\"'\") parmi ces valeurs, faites-le précéder du caractère d'échappement, par "
+"exemple '\\\\xyz' or 'a\\'b')."
 
 #: export.php:73
 msgid "Selected export type has to be saved in file!"
