--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-09 22:22+0200\n"
-"Last-Translator: Robert Readman <robert_readman@hotmail.com>\n"
+"PO-Revision-Date: 2010-08-21 14:40+0200\n"
+"Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: english-gb <en_GB@li.org>\n"
 "Language: en_GB\n"
 "MIME-Version: 1.0\n"
@@ -767,7 +767,7 @@ msgstr "Database Log"
 #: enum_editor.php:21 libraries/tbl_properties.inc.php:798
 #, php-format
 msgid "Values for the column \"%s\""
-msgstr ""
+msgstr "Values for the column \"%s\""
 
 #: enum_editor.php:22
 #, fuzzy
@@ -8803,93 +8803,3 @@ msgstr "VIEW name"
 #: view_operations.php:91
 msgid "Rename view to"
 msgstr "Rename view to"
-
-#, fuzzy
-#~| msgid "Remove CRLF characters within columns"
-#~ msgid "Remove carriage return/line field characters within columns"
-#~ msgstr "Remove CRLF characters within columns"
-
-#, fuzzy
-#~| msgid "<code>@TABLE@</code>"
-#~ msgid "<code>IF NOT EXISTS</code>"
-#~ msgstr "<code>@TABLE@</code>"
-
-#, fuzzy
-#~| msgid "<code>@DATABASE@</code>"
-#~ msgid "<code>AUTO_INCREMENT</code>"
-#~ msgstr "<code>@DATABASE@</code>"
-
-#~ msgid "Dump %s row(s) starting at row # %s"
-#~ msgstr "Dump %s row(s) starting at row # %s"
-
-#~ msgid "remember template"
-#~ msgstr "remember template"
-
-#~ msgid "Imported file compression will be automatically detected from: %s"
-#~ msgstr "Imported file compression will be automatically detected from: %s"
-
-#~ msgid "Continued table caption"
-#~ msgstr "Continued table caption"
-
-#~ msgid "Database export options"
-#~ msgstr "Database export options"
-
-#~ msgid "Enclose table and column names with backquotes"
-#~ msgstr "Enclose table and column names with backquotes"
-
-#~ msgid "Add into comments"
-#~ msgstr "Add into comments"
-
-#~ msgid "Creation/Update/Check dates"
-#~ msgstr "Creation/Update/Check dates"
-
-#~ msgid "Complete inserts"
-#~ msgstr "Complete inserts"
-
-#~ msgid "Extended inserts"
-#~ msgstr "Extended inserts"
-
-#~ msgid "Use delayed inserts"
-#~ msgstr "Use delayed inserts"
-
-#~ msgid "Use ignore inserts"
-#~ msgstr "Use ignore inserts"
-
-#~ msgid "Use hexadecimal for BLOB"
-#~ msgstr "Use hexadecimal for BLOB"
-
-#~ msgid "Export time in UTC"
-#~ msgstr "Export time in UTC"
-
-#~ msgid "Export Structure Schemas (recommended)"
-#~ msgstr "Export Structure Schemas (recommended)"
-
-#~ msgid "Export functions"
-#~ msgstr "Export functions"
-
-#~ msgid "Export procedures"
-#~ msgstr "Export procedures"
-
-#~ msgid "Export tables"
-#~ msgstr "Export tables"
-
-#~ msgid "Export triggers"
-#~ msgstr "Export triggers"
-
-#~ msgid "Export views"
-#~ msgstr "Export views"
-
-#~ msgid "Column names in first row"
-#~ msgstr "Column names in first row"
-
-#~ msgid "Invalid column (%s) specified!"
-#~ msgstr "Invalid column (%s) specified!"
-
-#~ msgid "Actions"
-#~ msgstr "Actions"
-
-#~ msgid "Interface"
-#~ msgstr "Interface"
-
-#~ msgid "Custom color"
-#~ msgstr "Custom colour"
