--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-21 14:40+0200\n"
+"PO-Revision-Date: 2010-08-21 14:41+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: english-gb <en_GB@li.org>\n"
 "Language: en_GB\n"
@@ -770,7 +770,6 @@ msgid "Values for the column \"%s\""
 msgstr "Values for the column \"%s\""
 
 #: enum_editor.php:22
-#, fuzzy
 #| msgid ""
 #| "Please enter the values for transformation options using this format: "
 #| "'a', 100, b,'c'...<br />If you ever need to put a backslash (\"\\\") or a "
@@ -781,10 +780,9 @@ msgid ""
 "need to put a backslash (\"\\\") or a single quote (\"'\") amongst those "
 "values, precede it with a backslash (for example '\\\\xyz' or 'a\\'b')."
 msgstr ""
-"Please enter the values for transformation options using this format: 'a', "
-"100, b,'c'...<br />If you ever need to put a backslash (\"\\\") or a single "
-"quote (\"'\") amongst those values, precede it with a backslash (for example "
-"'\\\\xyz' or 'a\\'b')."
+"Enter each value in a separate field, enclosed in single quotes. If you ever "
+"need to put a backslash (\"\\\") or a single quote (\"'\") amongst those values, "
+"precede it with a backslash (for example '\\\\xyz' or 'a\\'b')."
 
 #: export.php:73
 msgid "Selected export type has to be saved in file!"
