--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1846,10 +1846,10 @@ msgid "Browse your computer:"
 msgstr "Browse your computer:"
 
 #: libraries/common.lib.php:2936
-#, fuzzy, php-format
+#, php-format
 #| msgid "web server upload directory"
 msgid "Select from the web server upload directory <b>%s</b>:"
-msgstr "web server upload directory"
+msgstr "Select from the web server upload directory <b>%s</b>:"
 
 #: libraries/common.lib.php:2948 libraries/sql_query_form.lib.php:493
 #: tbl_change.php:922
