--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2016,10 +2016,10 @@ msgid "Exporting tables in the database \"%s\""
 msgstr "Exporting tables in the database \"%s\""
 
 #: libraries/display_export.lib.php:91
-#, fuzzy, php-format
+#, php-format
 #| msgid "Create table on database %s"
 msgid "Exporting rows in the table \"%s\""
-msgstr "Create table on database %s"
+msgstr "Exporting rows in the table \"%s\""
 
 #: libraries/display_export.lib.php:97
 #, fuzzy
