--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2022,10 +2022,9 @@ msgid "Exporting rows in the table \"%s\""
 msgstr "Exporting rows in the table \"%s\""
 
 #: libraries/display_export.lib.php:97
-#, fuzzy
 #| msgid "Export type"
 msgid "Export Method:"
-msgstr "Export type"
+msgstr "Export Method:"
 
 #: libraries/display_export.lib.php:113
 msgid "Quick - display only the minimal options to configure"
