Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2032,7 +2032,7 @@ msgstr "Quick - display only the minimal options to configure"
 
 #: libraries/display_export.lib.php:129
 msgid "Custom - display all possible options to configure"
-msgstr ""
+msgstr "Custom - display all possible options to configure"
 
 #: libraries/display_export.lib.php:137
 #, fuzzy
