--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2035,10 +2035,9 @@ msgid "Custom - display all possible options to configure"
 msgstr "Custom - display all possible options to configure"
 
 #: libraries/display_export.lib.php:137
-#, fuzzy
 #| msgid "Databases"
 msgid "Database(s):"
-msgstr "Databases"
+msgstr "Database(s):"
 
 #: libraries/display_export.lib.php:139
 #, fuzzy
