--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2040,10 +2040,9 @@ msgid "Database(s):"
 msgstr "Database(s):"
 
 #: libraries/display_export.lib.php:139
-#, fuzzy
 #| msgid "Tables"
 msgid "Table(s):"
-msgstr "Tables"
+msgstr "Table(s):"
 
 #: libraries/display_export.lib.php:149
 #, fuzzy
