Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2061,7 +2061,7 @@ msgstr "Number of rows:"
 
 #: libraries/display_export.lib.php:162
 msgid "Row to begin at:"
-msgstr ""
+msgstr "Row to begin at:"
 
 #: libraries/display_export.lib.php:173
 msgid "Dump all rows"
