--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2088,10 +2088,9 @@ msgid "Save output to a file"
 msgstr "Save output to a file"
 
 #: libraries/display_export.lib.php:227
-#, fuzzy
 #| msgid "File name template"
 msgid "File name template:"
-msgstr "File name template"
+msgstr "File name template:"
 
 #: libraries/display_export.lib.php:230
 msgid "server name"
