--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2121,7 +2121,7 @@ msgstr ""
 
 #: libraries/display_export.lib.php:284
 msgid "use this for future exports"
-msgstr ""
+msgstr "use this for future exports"
 
 #: libraries/display_export.lib.php:290 libraries/display_import.lib.php:188
 #: libraries/display_import.lib.php:201 libraries/sql_query_form.lib.php:509
