--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2220,7 +2220,7 @@ msgstr "File to Import:"
 #: libraries/display_import.lib.php:156
 #, php-format
 msgid "File may be compressed (%s) or uncompressed."
-msgstr ""
+msgstr "File may be compressed (%s) or uncompressed."
 
 #: libraries/display_import.lib.php:158
 msgid ""
