--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2882,10 +2882,9 @@ msgid "Columns separated with:"
 msgstr "Columns separated with:"
 
 #: libraries/export/csv.php:22 libraries/import/csv.php:28
-#, fuzzy
 #| msgid "Columns enclosed by"
 msgid "Columns enclosed with:"
-msgstr "Columns enclosed by"
+msgstr "Columns enclosed with:"
 
 #: libraries/export/csv.php:23 libraries/import/csv.php:29
 #, fuzzy
