--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2900,10 +2900,9 @@ msgstr "Lines terminated with:"
 #: libraries/export/htmlword.php:28 libraries/export/latex.php:79
 #: libraries/export/ods.php:23 libraries/export/odt.php:59
 #: libraries/export/xls.php:23 libraries/export/xlsx.php:23
-#, fuzzy
 #| msgid "Replace NULL by"
 msgid "Replace NULL with:"
-msgstr "Replace NULL by"
+msgstr "Replace NULL with:"
 
 #: libraries/export/csv.php:26 libraries/export/excel.php:23
 #, fuzzy
