--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2933,11 +2933,10 @@ msgstr "Microsoft Word 2000"
 #: libraries/export/htmlword.php:23 libraries/export/latex.php:39
 #: libraries/export/odt.php:31 libraries/export/sql.php:77
 #: libraries/export/texytext.php:22
-#, fuzzy
 #| msgid "%s table"
 #| msgid_plural "%s tables"
 msgid "Dump table"
-msgstr "%s table"
+msgstr "Dump table"
 
 #: libraries/export/htmlword.php:24 libraries/export/latex.php:41
 #: libraries/export/odt.php:33 libraries/export/sql.php:79
