Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2996,10 +2996,9 @@ msgstr "Include table caption"
 
 #: libraries/export/latex.php:47 libraries/export/odt.php:39
 #: libraries/export/sql.php:87
-#, fuzzy
 #| msgid "Transformation options"
 msgid "Object creation options"
-msgstr "Transformation options"
+msgstr "Object creation options"
 
 #: libraries/export/latex.php:49 libraries/export/latex.php:73
 msgid "Table caption"
