--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3026,10 +3026,9 @@ msgstr "Display comments"
 
 #: libraries/export/latex.php:62 libraries/export/odt.php:48
 #: libraries/export/sql.php:44
-#, fuzzy
 #| msgid "Available MIME types"
 msgid "Display MIME types"
-msgstr "Available MIME types"
+msgstr "Display MIME types"
 
 #: libraries/export/latex.php:139 libraries/export/sql.php:281
 #: libraries/export/xml.php:105 libraries/header_printview.inc.php:56
