--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3087,10 +3087,9 @@ msgid "(Generates a report containing the data of a single table)"
 msgstr "(Generates a report containing the data of a single table)"
 
 #: libraries/export/pdf.php:24
-#, fuzzy
 #| msgid "Report title"
 msgid "Report title:"
-msgstr "Report title"
+msgstr "Report title:"
 
 #: libraries/export/php_array.php:16
 msgid "PHP array"
