Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3140,10 +3140,9 @@ msgid "Add %s statement"
 msgstr "Add %s statement"
 
 #: libraries/export/sql.php:91
-#, fuzzy
 #| msgid "Statements"
 msgid "Add statements:"
-msgstr "Statements"
+msgstr "Add statements:"
 
 #: libraries/export/sql.php:111
 #, fuzzy
