--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3150,7 +3150,6 @@ msgid "<code>CREATE TABLE</code> options:"
 msgstr "<code>CREATE TABLE</code> options:"
 
 #: libraries/export/sql.php:123
-#, fuzzy
 #| msgid ""
 #| "&quot;Enclose table and column names with backquotes&quot; ensures that "
 #| "column and table names formed with special characters are protected."
@@ -3158,8 +3157,8 @@ msgid ""
 "Enclose table and field names with backquotes <i>(Protects field and table "
 "names formed with special characters)</i>"
 msgstr ""
-"&quot;Enclose table and column names with backquotes&quot; ensures that "
-"column and table names formed with special characters are protected."
+"Enclose table and field names with backquotes <i>(Protects field and table "
+"names formed with special characters)</i>"
 
 #: libraries/export/sql.php:136
 msgid "Instead of <code>INSERT</code> statements, use:"
