--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3170,7 +3170,7 @@ msgstr "<code>INSERT DELAYED</code> statements"
 
 #: libraries/export/sql.php:140
 msgid "<code>INSERT IGNORE</code> statements"
-msgstr ""
+msgstr "<code>INSERT IGNORE</code> statements"
 
 #: libraries/export/sql.php:147
 msgid "Function to use when dumping data:"
