--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3293,7 +3293,7 @@ msgstr "XML"
 
 #: libraries/export/xml.php:30
 msgid "Object creation options (all are recommended)"
-msgstr ""
+msgstr "Object creation options (all are recommended)"
 
 #: libraries/export/xml.php:36 server_databases.php:114 server_status.php:370
 #: setup/lib/messages.inc.php:115
