--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3301,10 +3301,9 @@ msgid "Tables"
 msgstr "Tables"
 
 #: libraries/export/xml.php:40
-#, fuzzy
 #| msgid "View"
 msgid "Views"
-msgstr "View"
+msgstr "Views"
 
 #: libraries/export/xml.php:47
 msgid "Export contents"
