--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3390,6 +3390,9 @@ msgid ""
 "database, list the corresponding column names here. Column names must be "
 "separated by commas and not enclosed in quotations."
 msgstr ""
+"If the data in each row of the file is not in the same order as in the "
+"database, list the corresponding column names here. Column names must be "
+"separated by commas and not enclosed in quotations."
 
 #: libraries/import/csv.php:41
 #, fuzzy
