--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3427,6 +3427,8 @@ msgid ""
 "Invalid column (%s) specified! Ensure that columns names are spelled "
 "correctly, separated by commas, and not enclosed in quotes."
 msgstr ""
+"Invalid column (%s) specified! Ensure that columns names are spelled "
+"correctly, separated by commas, and not enclosed in quotes."
 
 #: libraries/import/csv.php:179 libraries/import/csv.php:426
 #, php-format
