--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -3485,10 +3485,9 @@ msgid "SQL compatibility mode:"
 msgstr "SQL compatibility mode:"
 
 #: libraries/import/sql.php:42
-#, fuzzy
 #| msgid "Do not use AUTO_INCREMENT for zero values"
 msgid "Do not use <code>AUTO_INCREMENT</code> for zero values"
-msgstr "Do not use AUTO_INCREMENT for zero values"
+msgstr "Do not use <code>AUTO_INCREMENT</code> for zero values"
 
 #: libraries/import/xml.php:74 libraries/import/xml.php:130
 msgid ""
