--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4167,7 +4167,7 @@ msgstr ""
 
 #: libraries/tbl_properties.inc.php:371
 msgid "ENUM or SET data too long?"
-msgstr ""
+msgstr "ENUM or SET data too long?"
 
 #: libraries/tbl_properties.inc.php:373
 msgid "Get more editing space"
