--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4217,7 +4217,6 @@ msgid "You have to add at least one column."
 msgstr "You have to add at least one column."
 
 #: libraries/tbl_properties.inc.php:799
-#, fuzzy
 #| msgid ""
 #| "Please enter the values for transformation options using this format: "
 #| "'a', 100, b,'c'...<br />If you ever need to put a backslash (\"\\\") or a "
@@ -4228,10 +4227,9 @@ msgid ""
 "(\"\\\") or a single quote (\"'\") amongst those values, precede it with a "
 "backslash (for example '\\\\xyz' or 'a\\'b')."
 msgstr ""
-"Please enter the values for transformation options using this format: 'a', "
-"100, b,'c'...<br />If you ever need to put a backslash (\"\\\") or a single "
-"quote (\"'\") amongst those values, precede it with a backslash (for example "
-"'\\\\xyz' or 'a\\'b')."
+"Enter each value in a separate field. If you ever need to put a backslash "
+"(\"\\\") or a single quote (\"'\") amongst those values, precede it with a "
+"backslash (for example '\\\\xyz' or 'a\\'b')."
 
 #: libraries/tbl_triggers.lib.php:28
 msgid "Event"
