--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4385,10 +4385,9 @@ msgid "MySQL connection collation"
 msgstr "MySQL connection collation"
 
 #: main.php:112
-#, fuzzy
 #| msgid "Other core settings"
 msgid "Appearance Settings"
-msgstr "Other core settings"
+msgstr "Appearance Settings"
 
 #: main.php:132
 msgid "Background color"
