--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4391,7 +4391,7 @@ msgstr "Appearance Settings"
 
 #: main.php:132
 msgid "Background color"
-msgstr ""
+msgstr "Background color"
 
 #: main.php:133
 msgid "Choose..."
