--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-21 19:47+0200\n"
+"PO-Revision-Date: 2010-08-21 19:48+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: english-gb <en_GB@li.org>\n"
 "Language: en_GB\n"
@@ -6827,7 +6827,7 @@ msgstr "Format"
 
 #: setup/lib/messages.inc.php:86
 msgid "Method"
-msgstr ""
+msgstr "Method"
 
 #: setup/lib/messages.inc.php:87
 msgid "Save on server"
