--- a/po/fr.po
+++ b/po/fr.po
@@ -2065,10 +2065,9 @@ msgid "Database(s):"
 msgstr "Base(s) de données"
 
 #: libraries/display_export.lib.php:139
-#, fuzzy
 #| msgid "Tables"
 msgid "Table(s):"
-msgstr "Tables"
+msgstr "Table(s)"
 
 #: libraries/display_export.lib.php:149
 #, fuzzy
