Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -2094,7 +2094,7 @@ msgstr "Exporter tous les enregistrements"
 
 #: libraries/display_export.lib.php:181 libraries/display_export.lib.php:202
 msgid "Output:"
-msgstr ""
+msgstr "Sortie:"
 
 #: libraries/display_export.lib.php:188 libraries/display_export.lib.php:214
 #, fuzzy, php-format
