--- a/po/fr.po
+++ b/po/fr.po
@@ -2113,10 +2113,9 @@ msgid "Save output to a file"
 msgstr "Diriger la sortie vers un fichier"
 
 #: libraries/display_export.lib.php:227
-#, fuzzy
 #| msgid "File name template"
 msgid "File name template:"
-msgstr "Modèle de nom de fichier"
+msgstr "Modèle de nom de fichier:"
 
 #: libraries/display_export.lib.php:230
 msgid "server name"
