--- a/po/fr.po
+++ b/po/fr.po
@@ -2155,10 +2155,9 @@ msgid "Character set of the file:"
 msgstr "Jeu de caractères du fichier: "
 
 #: libraries/display_export.lib.php:318
-#, fuzzy
 #| msgid "Compression"
 msgid "Compression:"
-msgstr "Compression"
+msgstr "Compression:"
 
 #: libraries/display_export.lib.php:320 libraries/display_tbl.lib.php:528
 #: libraries/export/sql.php:916 libraries/tbl_properties.inc.php:578
