--- a/po/fr.po
+++ b/po/fr.po
@@ -2191,10 +2191,9 @@ msgid "Format-Specific Options:"
 msgstr "Options spécifiques au format:"
 
 #: libraries/display_export.lib.php:354 libraries/display_import.lib.php:260
-#, fuzzy
 #| msgid "Encoding conversion"
 msgid "Encoding Conversion:"
-msgstr "Conversion de l'encodage"
+msgstr "Conversion de l'encodage:"
 
 #: libraries/display_export.lib.php:360
 msgid "SQL compatibility mode"
