--- a/po/fr.po
+++ b/po/fr.po
@@ -2222,10 +2222,9 @@ msgstr ""
 "ne sont pas disponibles."
 
 #: libraries/display_import.lib.php:129
-#, fuzzy
 #| msgid "Cannot log in to the MySQL server"
 msgid "Importing into the current server"
-msgstr "Connexion au serveur MySQL non permise"
+msgstr "Importation dans le serveur actuel"
 
 #: libraries/display_import.lib.php:131
 #, fuzzy, php-format
