--- a/po/fr.po
+++ b/po/fr.po
@@ -2239,10 +2239,9 @@ msgid "Importing into the table \"%s\""
 msgstr "Importation dans la table «%s»"
 
 #: libraries/display_import.lib.php:139
-#, fuzzy
 #| msgid "File to import"
 msgid "File to Import:"
-msgstr "Fichier à importer"
+msgstr "Fichier à importer:"
 
 #: libraries/display_import.lib.php:156
 #, php-format
