--- a/po/fr.po
+++ b/po/fr.po
@@ -2261,10 +2261,9 @@ msgid "File uploads are not allowed on this server."
 msgstr "Les téléchargements vers ce serveur ne sont pas permis."
 
 #: libraries/display_import.lib.php:208
-#, fuzzy
 #| msgid "Partial import"
 msgid "Partial Import:"
-msgstr "Importation partielle"
+msgstr "Importation partielle:"
 
 #: libraries/display_import.lib.php:214
 #, php-format
